# tpRigToolkit-dccs-maya-plugins-rbfsolver

./: .travis.yml  LICENSE  README.md  README.rst  requirements.txt  setup.cfg  setup.py
docs/sphinx/: conf.py  index.rst
docs/sphinx/_templates/: layout.html
tests/: test_general.py
tpRigToolkit/: __init__.py
tpRigToolkit/dccs/: __init__.py
tpRigToolkit/dccs/maya/: __init__.py
tpRigToolkit/dccs/maya/plugins/: __init__.py
tpRigToolkit/dccs/maya/plugins/rbfsolver/: __logging__.ini  __version__.py
