[metadata]
name = tpRigToolkit-dccs-maya-plugins-rbfsolver
description = RBF Solver Plugin implementation for Maya
long_description = file: README.rst
long_description_content_type = text/x-rst
version = attr: tpRigToolkit.dccs.maya.plugins.rbfsolver.__version__.__version__
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/tpRigToolkit/tpRigToolkit-dccs-maya-plugins-rbfsolver

[options]
zip_safe = false
include_package_data = true
packages=find:
install_requires=
    pytest
    pytest-cov
    coveralls
    sphinx
    sphinx_rtd_theme
    tpPyUtils
    tpDccLib
    tpQtLib
    tpMayaLib

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1